--- a/featuredProjectPages/proj-mixi.html
+++ b/featuredProjectPages/proj-mixi.html
@@ -61,7 +61,13 @@
                     <div class="left-column">
                         <p class="shortDescription">An AI-powered beverage machine that transforms long-distance social
                             connections into interactive, multi-sensory experiences by analyzing spoken emotions and
-                            creating personalized drinks that reflect users' emotional states.</p>
+                            creating personalized drinks that reflect users' emotional states. By
+                            leveraging the universal tradition of bonding over food and drinks, MIXI uses AI to detect
+                            emotions from conversations
+                            and visualize them on a circumplex model of emotion. It then crafts personalized beverages,
+                            allowing users to share and
+                            experience each other's emotions through taste, fostering empathy and strengthening bonds
+                            despite physical distance.</p>
                         <p class="keywords">
                             <strong>Key Words:</strong><br>
                             AI Product Design, Emotion Recognition, Customized Beverage, Long-Distance Connection<br>
@@ -108,60 +114,91 @@
             <!-- --------------------------------------------------------------------------------- -->
 
             <!-- Gallery starts -->
-            <div class="description">
-                <p>In a world where friendships span continents, The Challenge of Long-Distance Connection lies in
-                    capturing the warmth of
-                    shared moments—like clinking glasses or sharing a toast together.<br><br>
-                    For centuries, The Culture Of Drinking has been a universal ritual for connection, symbolizing
-                    hospitality, friendship,
-                    and togetherness. A drink carries more than flavor; it carries emotions and memories.<br><br>
-                    MIXI brings the physicality of shared drinking into your long-distance connections, offering a
-                    multi-sensory experience
-                    that combines voice, visual, taste, and emotion. Each personalized drink goes beyond sharing a
-                    drink—it's a bridge that
-                    transforms emotional conversations into a meaningful, tangible experience.</p>
+            <!-- <div class="description">
+                <p>
+                    MIXI is a beverage machine designed to transform long-distance social connection into interactive
+                    and
+                    multi-sensory
+                    experiences. Building on the universal tradition of connecting over food and drinks, MIXI uses AI to
+                    analyze users'
+                    spoken conversations, detecting the emotions embedded within and visualizing them on circumplex
+                    model of
+                    emotion. By
+                    gathering and interpreting this emotional data, MIXI generates a personalized drink recipe that
+                    reflects
+                    the user’s
+                    overall emotional state. The machine then crafts the drink, allowing participants to share and
+                    experience each other’s
+                    emotions through taste. MIXI bridges physical distance by offering a unique way to connect,
+                    fostering
+                    empathy and
+                    deepening bonds through shared emotional expressions.
+                </p>
+            </div> -->
+
+            <br><br><br>
+
+
+            <!-- --------------------------------------------------------------------------------- -->
+            <!-- --------------------------------------------------------------------------------- -->
+
+            <!-- section starts -->
+            <div class="subSection">
+                <h2 class="subTitle">Concept</h2>
+                <img src="../assets/proj-mixi/inspiration.png">
+                <div class="wrapcontainer">
+                    <div class="wrap2content-2" style="padding-left: 0;">
+                        <p>MIXI brings the physicality of shared drinking into your long-distance connections,
+                            offering a
+                            multi-sensory experience
+                            that combines voice, visual, taste, and emotion. Each personalized drink goes beyond
+                            sharing a
+                            drink—it's a bridge that
+                            transforms emotional conversations into a meaningful, tangible experience.</p>
+                    </div>
+                    <div class="wrap2content-1" style="padding-right: 0;">
+                        <img src="../assets/proj-mixi/illustration.png" alt="Image">
+                    </div>
+                </div>
+
+
+            </div>
+            <!-- section ends -->
+
+            <!-- --------------------------------------------------------------------------------- -->
+            <!-- --------------------------------------------------------------------------------- -->
+
+            <div class="subSection">
+                <h2 class="subTitle">Product Introduction</h2>
+                <div>
+                    <img style="width: 120%; height: auto; max-width: 120%; object-fit: contain;transform: translateX(-2%); margin-left: -10%;margin-right: -2%;"
+                        src="../assets/proj-mixi/intro.png" alt="Product Intro">
+                </div>
             </div>
 
-            <div>
-                <img style="width: 120%; height: auto; max-width: 120%; object-fit: contain;transform: translateX(-2%); margin-left: -10%;margin-right: -2%;"
-                    src="../assets/proj-mixi/intro.png" alt="Product Intro">
-            </div>
 
             <div class="wrapcontainer">
                 <div class="wrap3content-1">
-                    <img class="keyImg" src="../assets" alt="Image 1">
+                    <img class="keyImg" src="../assets/proj-mixi/pic1.png" alt="Image 1">
                 </div>
                 <div class="wrap3content-1">
-                    <img class="keyImg" src="../assets" alt="Image 2">
+                    <img class="keyImg" src="../assets/proj-mixi/pic2.png" alt="Image 2">
                 </div>
                 <div class="wrap3content-1">
-                    <img class="keyImg" src="../assets" alt="Image 3">
+                    <img class="keyImg" src="../assets/proj-mixi/pic3.png" alt="Image 3">
                 </div>
             </div>
 
             <!-- --------------------------------------------------------------------------------- -->
             <!-- --------------------------------------------------------------------------------- -->
 
-
-            <div class="video">
-                <iframe src="https://www.youtube.com/embed/qAcGZ2xrFmc" frameborder="0" allowfullscreen></iframe>
+            <div class="subSection">
+                <h2 class="subTitle">Demo Video</h2>
+                <div class="video">
+                    <iframe src="https://www.youtube.com/embed/qAcGZ2xrFmc" frameborder="0" allowfullscreen></iframe>
+                </div>
             </div>
 
-            <p>
-                MIXI is a beverage machine designed to transform long-distance social connection into interactive and
-                multi-sensory
-                experiences. Building on the universal tradition of connecting over food and drinks, MIXI uses AI to
-                analyze users'
-                spoken conversations, detecting the emotions embedded within and visualizing them on circumplex model of
-                emotion. By
-                gathering and interpreting this emotional data, MIXI generates a personalized drink recipe that reflects
-                the user’s
-                overall emotional state. The machine then crafts the drink, allowing participants to share and
-                experience each other’s
-                emotions through taste. MIXI bridges physical distance by offering a unique way to connect, fostering
-                empathy and
-                deepening bonds through shared emotional expressions.
-            </p>
 
             <!-- --------------------------------------------------------------------------------- -->
             <!-- --------------------------------------------------------------------------------- -->
