--- a/index.html
+++ b/index.html
@@ -95,11 +95,32 @@
                 </div>
 
                 <!-- ----------------------------------------------- -->
-                <a class="feature-proj-block" href="featuredProjectPages/proj-etherealAlchemy.html">
+
+                <a class="feature-proj-block" href="featuredProjectPages/proj-mixi.html">
                     <div class="container-proj2">
-                        <img src="assets/indexPage/coverImage/ethereal.png" alt="Sample Image"
-                            class="hover-image-proj2">
+                        <img src="assets/proj-mixi/mixi-feature.png" alt="Sample Image" class="hover-image-proj2">
                         <div class="hover-text-proj2">
+                            <h3 class="feature-project-title">MIXI</h3>
+                            <p class="feature-project-tages">AI | Product Design<br>2024 | Group
+                                Work</p>
+                            <p class="feature-proj-description">An AI-powered beverage machine that transforms
+                                long-distance social connections into interactive, multi-sensory
+                                experiences by analyzing spoken emotions and creating personalized drinks that reflect
+                                users' emotional states.</p>
+                        </div>
+                    </div>
+                </a>
+                <div class="touchScreenDisplay">
+                    <p class="TS-feature-project-title">Descendant Of The Desert</p>
+                </div>
+
+                <!-- ----------------------------------------------- -->
+
+                <a class="feature-proj-block" href="featuredProjectPages/proj-etherealAlchemy.html">
+                    <div class="container-proj3">
+                        <img src="assets/indexPage/coverImage/ethereal.png" alt="Sample Image"
+                            class="hover-image-proj3">
+                        <div class="hover-text-proj3">
                             <h3 class="feature-project-title">Ethereal Alchemy</h3>
                             <p class="feature-project-tages">Motion Capture | Computing <br>2023 | Individual
                                 Work</p>
@@ -111,31 +132,33 @@
                     </div>
                 </a>
                 <div class="touchScreenDisplay">
-                    <p class="TS-feature-project-title">Descendant Of The Desert</p>
+                    <p class="TS-feature-project-title">Ethereal Alchemy</p>
                 </div>
+
                 <!-- ----------------------------------------------- -->
-                <a class="feature-proj-block" href="featuredProjectPages/proj-descendantOfTheDesert.html">
-                    <div class="container-proj3">
-                        <img src="assets/indexPage/coverImage/desert.png" alt="Sample Image" class="hover-image-proj3">
-                        <div class="hover-text-proj3">
-                            <h3 class="feature-project-title">Descendant Of The Desert</h3>
-                            <p class="feature-project-tages">Wearable Interactive Installation<br>2022 | Group Work</p>
-                            <p class="feature-proj-description">A speculative human biomorph that enables us to
-                                survive
-                                in the desert without taking refuge from the physical dependencies. </p>
+                <a class="feature-proj-block" href="featuredProjectPages/proj-amoeba.html">
+                    <div class="container-proj6">
+                        <img src="assets/proj-amoeba/amoeba-feature.png" alt="Sample Image" class="hover-image-proj6">
+                        <div class="hover-text-proj6">
+                            <h3 class="feature-project-title">Amoeba</h3>
+                            <p class="feature-project-tages">AI | Development | Grasshopper <br>2024 |
+                                Group Work</p>
+                            <p class="feature-proj-description">Amoeba is an AI-powered design tool integrated into
+                                Rhino Grasshopper, enabling designers to train custom AI models and generate dynamic 3D
+                                geometries for faster, more intuitive design iterations.</p>
                         </div>
                     </div>
                 </a>
                 <div class="touchScreenDisplay">
-                    <p class="TS-feature-project-title">City Of Belonging</p>
+                    <p class="TS-feature-project-title">Amoeba</p>
                 </div>
 
-
                 <!-- ----------------------------------------------- -->
+
                 <a class="feature-proj-block" href="featuredProjectPages/proj-trueDreamHome.html">
-                    <div class="container-proj4">
-                        <img src="assets/proj-home/home-feature.png" alt="Cover Image" class="hover-image-proj4">
-                        <div class="hover-text-proj4">
+                    <div class="container-proj5">
+                        <img src="assets/proj-home/home-feature.png" alt="Sample Image" class="hover-image-proj5">
+                        <div class="hover-text-proj5">
                             <h3 class="feature-project-title">True Dream Home</h3>
                             <p class="feature-project-tages">UX design | VR development | Gaming <br>2023 |
                                 Group Work
@@ -148,9 +171,33 @@
                     </div>
                 </a>
                 <div class="touchScreenDisplay">
-                    <p class="TS-feature-project-title">The Lost Letter</p>
+                    <p class="TS-feature-project-title">True Dream Home</p>
                 </div>
+
+
                 <!-- ----------------------------------------------- -->
+                <!-- add a new project: css-styles-indexPage.css - menu part ; js-script.js - Index page - Menu - Project hover animation-->
+                <a class="feature-proj-block" href="featuredProjectPages/proj-descendantOfTheDesert.html">
+                    <div class="container-proj4">
+                        <img src="assets/indexPage/coverImage/desert.png" alt="Cover Image" class="hover-image-proj4">
+                        <div class="hover-text-proj4">
+                            <h3 class="feature-project-title">Descendant Of The Desert</h3>
+                            <p class="feature-project-tages">Wearable Interactive Installation<br>2022 | Group Work</p>
+                            <p class="feature-proj-description">A speculative human biomorph that enables us to
+                                survive
+                                in the desert without taking refuge from the physical dependencies. </p>
+                        </div>
+                    </div>
+                </a>
+                <div class="touchScreenDisplay">
+                    <p class="TS-feature-project-title">Descendant Of The Desert</p>
+                </div>
+
+                <!-- ----------------------------------------------- -->
+
+
+
+                <!-- archive -->
                 <!-- <a class="feature-proj-block" href="featuredProjectPages/proj-theLostLetter.html">
                     <div class="container-proj4">
                         <img src="assets/indexPage/coverImage/letter.png" alt="Sample Image" class="hover-image-proj4">
@@ -168,7 +215,9 @@
                 <div class="touchScreenDisplay">
                     <p class="TS-feature-project-title">The Lost Letter</p>
                 </div> -->
+
                 <!-- ----------------------------------------------- -->
+
                 <!-- <a class="feature-proj-block" href="featuredProjectPages/proj-disconnect.html">
                     <div class="container-proj5">
                         <img src="assets/indexPage/coverImage/disconnect.png" alt="Sample Image"
@@ -185,19 +234,6 @@
                 <div class="touchScreenDisplay">
                     <p class="TS-feature-project-title">Disconnect</p>
                 </div> -->
-                <!-- ----------------------------------------------- -->
-                <!-- add a new project: css-styles-indexPage.css - menu part ; js-script.js - Index page - Menu - Project hover animation-->
-                <!-- <a class="feature-proj-block" href="featuredProjectPages/proj-descendantOfTheDesert.html">
-                    <div class="container-proj6">
-                        <img src="assets/indexPage/coverImage/desert.png" alt="Sample Image" class="hover-image-proj6">
-                        <div class="hover-text-proj6">
-                            <h3 class="feature-project-title">Name</h3>
-                            <p class="feature-project-tages">***</p>
-                            <p class="feature-proj-description">***</p>
-                        </div>
-                    </div>
-                </a> -->
-                <!-- ----------------------------------------------- -->
             </div>
         </div>
     </div>
