--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="all-content">
             <p class="featuredProjects-Title">Featured Projects</p>
             <div class="featured-projects">
-                <a class="feature-proj-block" href="featuredProjectPages/proj-cityOfBelonging.html">
+                <a class="feature-proj-block" href="https://st22533.wixsite.com/portfolio/general-clean">
                     <div class="container-proj1">
                         <img src="assets/indexPage/coverImage/belonging.png" alt="Sample Image"
                             class="hover-image-proj1">
