--- a/index.html
+++ b/index.html
@@ -96,31 +96,11 @@
 
                 <!-- ----------------------------------------------- -->
 
-                <a class="feature-proj-block" href="featuredProjectPages/proj-mixi.html">
+                <a class="feature-proj-block" href="https://www.sissytian.com/ethereal-alchemy">
                     <div class="container-proj2">
-                        <img src="assets/proj-mixi/mixi-feature.png" alt="Sample Image" class="hover-image-proj2">
-                        <div class="hover-text-proj2">
-                            <h3 class="feature-project-title">MIXI</h3>
-                            <p class="feature-project-tages">AI | Product Design<br>2024 | Group
-                                Work</p>
-                            <p class="feature-proj-description">An AI-powered beverage machine that transforms
-                                long-distance social connections into interactive, multi-sensory
-                                experiences by analyzing spoken emotions and creating personalized drinks that reflect
-                                users' emotional states.</p>
-                        </div>
-                    </div>
-                </a>
-                <div class="touchScreenDisplay">
-                    <p class="TS-feature-project-title">Descendant Of The Desert</p>
-                </div>
-
-                <!-- ----------------------------------------------- -->
-
-                <a class="feature-proj-block" href="featuredProjectPages/proj-etherealAlchemy.html">
-                    <div class="container-proj3">
                         <img src="assets/indexPage/coverImage/ethereal.png" alt="Sample Image"
-                            class="hover-image-proj3">
-                        <div class="hover-text-proj3">
+                            class="hover-image-proj2">
+                        <div class="hover-text-proj2">
                             <h3 class="feature-project-title">Ethereal Alchemy</h3>
                             <p class="feature-project-tages">Motion Capture | Computing <br>2023 | Individual
                                 Work</p>
@@ -133,6 +113,25 @@
                 </a>
                 <div class="touchScreenDisplay">
                     <p class="TS-feature-project-title">Ethereal Alchemy</p>
+                </div>
+
+                <!-- ----------------------------------------------- -->
+
+                <a class="feature-proj-block" href="featuredProjectPages/proj-mixi.html">
+                    <div class="container-proj3">
+                        <img src="assets/proj-mixi/mixi-feature.png" alt="Sample Image" class="hover-image-proj3">
+                        <div class="hover-text-proj3">
+                            <p class="feature-project-tages">AI | Product Design<br>2024 | Group
+                                Work</p>
+                            <p class="feature-proj-description">An AI-powered beverage machine that transforms
+                                long-distance social connections into interactive, multi-sensory
+                                experiences by analyzing spoken emotions and creating personalized drinks that reflect
+                                users' emotional states.</p>
+                        </div>
+                    </div>
+                </a>
+                <div class="touchScreenDisplay">
+                    <p class="TS-feature-project-title">MIXI</p>
                 </div>
 
                 <!-- ----------------------------------------------- -->
