--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="all-content">
             <p class="featuredProjects-Title">Featured Projects</p>
             <div class="featured-projects">
-                <a class="feature-proj-block" href="https://st22533.wixsite.com/portfolio/general-clean">
+                <a class="feature-proj-block" href="https://st22533.wixsite.com/portfolio/projects">
                     <div class="container-proj1">
                         <img src="assets/indexPage/coverImage/belonging.png" alt="Sample Image"
                             class="hover-image-proj1">
@@ -96,7 +96,7 @@
 
                 <!-- ----------------------------------------------- -->
 
-                <a class="feature-proj-block" href="https://www.sissytian.com/ethereal-alchemy">
+                <a class="feature-proj-block" href="https://st22533.wixsite.com/portfolio/ethereal-alchemy">
                     <div class="container-proj2">
                         <img src="assets/indexPage/coverImage/ethereal.png" alt="Sample Image"
                             class="hover-image-proj2">
