update feature projects

--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
                     <div class="container-proj3">
                         <img src="assets/proj-mixi/mixi-feature.png" alt="Sample Image" class="hover-image-proj3">
                         <div class="hover-text-proj3">
+                            <h3 class="feature-project-title">MIXI</h3>
                             <p class="feature-project-tages">AI | Product Design<br>2024 | Group
                                 Work</p>
                             <p class="feature-proj-description">An AI-powered beverage machine that transforms
@@ -135,7 +136,7 @@
                 </div>
 
                 <!-- ----------------------------------------------- -->
-                <a class="feature-proj-block" href="featuredProjectPages/proj-amoeba.html">
+                <!-- <a class="feature-proj-block" href="featuredProjectPages/proj-amoeba.html">
                     <div class="container-proj6">
                         <img src="assets/proj-amoeba/amoeba-feature.png" alt="Sample Image" class="hover-image-proj6">
                         <div class="hover-text-proj6">
@@ -150,11 +151,11 @@
                 </a>
                 <div class="touchScreenDisplay">
                     <p class="TS-feature-project-title">Amoeba</p>
-                </div>
+                </div> -->
 
                 <!-- ----------------------------------------------- -->
 
-                <a class="feature-proj-block" href="featuredProjectPages/proj-trueDreamHome.html">
+                <!-- <a class="feature-proj-block" href="featuredProjectPages/proj-trueDreamHome.html">
                     <div class="container-proj5">
                         <img src="assets/proj-home/home-feature.png" alt="Sample Image" class="hover-image-proj5">
                         <div class="hover-text-proj5">
@@ -171,12 +172,12 @@
                 </a>
                 <div class="touchScreenDisplay">
                     <p class="TS-feature-project-title">True Dream Home</p>
-                </div>
+                </div> -->
 
 
                 <!-- ----------------------------------------------- -->
                 <!-- add a new project: css-styles-indexPage.css - menu part ; js-script.js - Index page - Menu - Project hover animation-->
-                <a class="feature-proj-block" href="featuredProjectPages/proj-descendantOfTheDesert.html">
+                <!-- <a class="feature-proj-block" href="featuredProjectPages/proj-descendantOfTheDesert.html">
                     <div class="container-proj4">
                         <img src="assets/indexPage/coverImage/desert.png" alt="Cover Image" class="hover-image-proj4">
                         <div class="hover-text-proj4">
@@ -190,7 +191,7 @@
                 </a>
                 <div class="touchScreenDisplay">
                     <p class="TS-feature-project-title">Descendant Of The Desert</p>
-                </div>
+                </div> -->
 
                 <!-- ----------------------------------------------- -->
 
