--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 </div>
 
                 <!-- ----------------------------------------------- -->
-
+                <!-- slide right -->
                 <a class="feature-proj-block" href="https://st22533.wixsite.com/portfolio/ethereal-alchemy">
                     <div class="container-proj2">
                         <img src="assets/indexPage/coverImage/ethereal.png" alt="Sample Image"
@@ -116,26 +116,43 @@
                 </div>
 
                 <!-- ----------------------------------------------- -->
-
-                <a class="feature-proj-block" href="featuredProjectPages/proj-mixi.html">
+                <!-- slide left -->
+                <a class="feature-proj-block" href="https://st22533.wixsite.com/portfolio/tmall-campus">
                     <div class="container-proj3">
-                        <img src="assets/proj-mixi/mixi-feature.png" alt="Sample Image" class="hover-image-proj3">
+                        <img src="assets/indexPage/coverImage/tmall.png" alt="Sample Image" class="hover-image-proj3">
                         <div class="hover-text-proj3">
+                            <h3 class="feature-project-title">Tmall Campus App Design</h3>
+                            <p class="feature-project-tages">UI/UX Design<br>2023 | Internship</p>
+                            <p class="feature-proj-description">Designed the user experience and user interface for the
+                                Tmall Campus ap for student campus services, contributing to 500,000+ downloads in the
+                                first month.</p>
+                        </div>
+                    </div>
+                </a>
+                <div class="touchScreenDisplay">
+                    <p class="TS-feature-project-title">Tmall Campus</p>
+                </div>
+
+
+                <!-- ----------------------------------------------- -->
+                <a class="feature-proj-block" href="featuredProjectPages/proj-mixi.html">
+                    <div class="container-proj4">
+                        <img src="assets/proj-mixi/mixi-feature.png" alt="Cover Image" class="hover-image-proj4">
+                        <div class="hover-text-proj4">
                             <h3 class="feature-project-title">MIXI</h3>
                             <p class="feature-project-tages">AI | Product Design<br>2024 | Group
                                 Work</p>
                             <p class="feature-proj-description">An AI-powered beverage machine that transforms
                                 long-distance social connections into interactive, multi-sensory
-                                experiences by analyzing spoken emotions and creating personalized drinks that reflect
-                                users' emotional states.</p>
+                                experiences by analyzing spoken emotions and creating personalized drinks.</p>
                         </div>
                     </div>
                 </a>
                 <div class="touchScreenDisplay">
                     <p class="TS-feature-project-title">MIXI</p>
                 </div>
-
                 <!-- ----------------------------------------------- -->
+
                 <!-- <a class="feature-proj-block" href="featuredProjectPages/proj-amoeba.html">
                     <div class="container-proj6">
                         <img src="assets/proj-amoeba/amoeba-feature.png" alt="Sample Image" class="hover-image-proj6">
@@ -198,6 +215,28 @@
 
 
                 <!-- archive -->
+
+
+                <!-- slide left -->
+                <!-- <a class="feature-proj-block" href="featuredProjectPages/proj-mixi.html">
+                    <div class="container-proj3">
+                        <img src="assets/proj-mixi/mixi-feature.png" alt="Sample Image" class="hover-image-proj3">
+                        <div class="hover-text-proj3">
+                            <h3 class="feature-project-title">MIXI</h3>
+                            <p class="feature-project-tages">AI | Product Design<br>2024 | Group
+                                Work</p>
+                            <p class="feature-proj-description">An AI-powered beverage machine that transforms
+                                long-distance social connections into interactive, multi-sensory
+                                experiences by analyzing spoken emotions and creating personalized drinks that reflect
+                                users' emotional states.</p>
+                        </div>
+                    </div>
+                </a>
+                <div class="touchScreenDisplay">
+                    <p class="TS-feature-project-title">MIXI</p>
+                </div> -->
+
+
                 <!-- <a class="feature-proj-block" href="featuredProjectPages/proj-theLostLetter.html">
                     <div class="container-proj4">
                         <img src="assets/indexPage/coverImage/letter.png" alt="Sample Image" class="hover-image-proj4">
